src/wasm-lib/kcl/src/parser/snapshots/kcl_lib__parser__parser_impl__snapshot_tests__q.snap
---
source: kcl/src/parser/parser_impl.rs
expression: actual
---
{
  "start": 0,
  "end": 30,
  "body": [
    {
      "type": "VariableDeclaration",
      "type": "VariableDeclaration",
      "start": 0,
      "end": 30,
      "declarations": [
        {
          "type": "VariableDeclarator",
          "start": 6,
          "end": 30,
          "id": {
            "type": "Identifier",
            "start": 6,
            "end": 12,
            "name": "height"
          },
          "init": {
            "type": "ArrayExpression",
            "start": 15,
            "end": 30,
            "elements": [
              {
                "type": "MemberExpression",
                "start": 17,
                "end": 25,
                "object": {
                  "type": "Identifier",
                  "start": 17,
                  "end": 20,
                  "name": "obj"
                },
                "property": {
                  "type": "Literal",
                  "start": 21,
                  "end": 24,
                  "value": "a",
                  "raw": "\"a\""
                },
                "computed": false
              },
              {
                "type": "Literal",
                "start": 27,
                "end": 28,
                "value": 0,
                "raw": "0"
              }
            ]
          }
        }
      ],
      "kind": "const"
    }
  ]
}
