src/wasm-lib/kcl/src/parser/snapshots/kcl_lib__parser__parser_impl__snapshot_tests__s.snap
---
source: kcl/src/parser/parser_impl.rs
expression: actual
---
{
  "start": 0,
  "end": 27,
  "body": [
    {
      "type": "VariableDeclaration",
      "type": "VariableDeclaration",
      "start": 0,
      "end": 27,
      "declarations": [
        {
          "type": "VariableDeclarator",
          "start": 6,
          "end": 27,
          "id": {
            "type": "Identifier",
            "start": 6,
            "end": 10,
            "name": "prop"
          },
          "init": {
            "type": "MemberExpression",
            "start": 13,
            "end": 27,
            "object": {
              "type": "MemberExpression",
              "start": 13,
              "end": 22,
              "object": {
                "type": "Identifier",
                "start": 13,
                "end": 15,
                "name": "yo"
              },
              "property": {
                "type": "Literal",
                "start": 16,
                "end": 21,
                "value": "one",
                "raw": "\"one\""
              },
              "computed": false
            },
            "property": {
              "type": "Identifier",
              "start": 23,
              "end": 26,
              "name": "two"
            },
            "computed": true
          }
        }
      ],
      "kind": "const"
    }
  ]
}
