src/wasm-lib/kcl/src/parser/snapshots/kcl_lib__parser__parser_impl__snapshot_tests__t.snap
---
source: kcl/src/parser/parser_impl.rs
expression: actual
---
{
  "start": 0,
  "end": 17,
  "body": [
    {
      "type": "VariableDeclaration",
      "type": "VariableDeclaration",
      "start": 0,
      "end": 17,
      "declarations": [
        {
          "type": "VariableDeclarator",
          "start": 6,
          "end": 17,
          "id": {
            "type": "Identifier",
            "start": 6,
            "end": 9,
            "name": "pt1"
          },
          "init": {
            "type": "MemberExpression",
            "start": 12,
            "end": 17,
            "object": {
              "type": "Identifier",
              "start": 12,
              "end": 14,
              "name": "b1"
            },
            "property": {
              "type": "Identifier",
              "start": 15,
              "end": 16,
              "name": "x"
            },
            "computed": true
          }
        }
      ],
      "kind": "const"
    }
  ]
}
