src/wasm-lib/kcl/src/parser/snapshots/kcl_lib__parser__parser_impl__snapshot_tests__w.snap
---
source: kcl/src/parser/parser_impl.rs
expression: actual
---
{
  "start": 0,
  "end": 22,
  "body": [
    {
      "type": "VariableDeclaration",
      "type": "VariableDeclaration",
      "start": 0,
      "end": 22,
      "declarations": [
        {
          "type": "VariableDeclarator",
          "start": 6,
          "end": 22,
          "id": {
            "type": "Identifier",
            "start": 6,
            "end": 9,
            "name": "pt1"
          },
          "init": {
            "type": "MemberExpression",
            "start": 12,
            "end": 22,
            "object": {
              "type": "Identifier",
              "start": 12,
              "end": 14,
              "name": "b1"
            },
            "property": {
              "type": "Literal",
              "start": 15,
              "end": 21,
              "value": "zero",
              "raw": "'zero'"
            },
            "computed": false
          }
        }
      ],
      "kind": "const"
    }
  ]
}
