src/wasm-lib/kcl/src/parser/snapshots/kcl_lib__parser__parser_impl__snapshot_tests__x.snap
---
source: kcl/src/parser/parser_impl.rs
expression: actual
---
{
  "start": 0,
  "end": 19,
  "body": [
    {
      "type": "VariableDeclaration",
      "type": "VariableDeclaration",
      "start": 0,
      "end": 19,
      "declarations": [
        {
          "type": "VariableDeclarator",
          "start": 6,
          "end": 19,
          "id": {
            "type": "Identifier",
            "start": 6,
            "end": 9,
            "name": "pt1"
          },
          "init": {
            "type": "MemberExpression",
            "start": 12,
            "end": 19,
            "object": {
              "type": "Identifier",
              "start": 12,
              "end": 14,
              "name": "b1"
            },
            "property": {
              "type": "Identifier",
              "start": 15,
              "end": 19,
              "name": "zero"
            },
            "computed": false
          }
        }
      ],
      "kind": "const"
    }
  ]
}
