src/wasm-lib/kcl/src/parser/snapshots/kcl_lib__parser__parser_impl__snapshot_tests__y.snap
---
source: kcl/src/parser/parser_impl.rs
expression: actual
---
{
  "start": 0,
  "end": 29,
  "body": [
    {
      "type": "VariableDeclaration",
      "type": "VariableDeclaration",
      "start": 0,
      "end": 29,
      "declarations": [
        {
          "type": "VariableDeclarator",
          "start": 6,
          "end": 29,
          "id": {
            "type": "Identifier",
            "start": 6,
            "end": 8,
            "name": "sg",
            "digest": null
          },
          "init": {
            "type": "CallExpression",
            "type": "CallExpression",
            "start": 11,
            "end": 29,
            "callee": {
              "type": "Identifier",
              "start": 11,
              "end": 24,
              "name": "startSketchAt",
              "digest": null
            },
            "arguments": [
              {
                "type": "Identifier",
                "type": "Identifier",
                "start": 25,
                "end": 28,
                "name": "pos",
                "digest": null
              }
            ],
            "optional": false,
            "digest": null
          },
          "digest": null
        }
      ],
      "visibility": "default",
      "kind": "const",
      "digest": null
    }
  ],
  "nonCodeMeta": {
    "nonCodeNodes": {},
    "start": [],
    "digest": null
  },
  "digest": null
}
